--- a/index.html
+++ b/index.html
@@ -57,76 +57,117 @@
           <p>Technical Interview Platform</p>
         </div>
         <nav>
-          <button class="nav-btn active">Dashboard</button>
+          <button class="nav-btn active" data-view="dashboard" type="button">Dashboard</button>
           <p class="nav-header">TOPICS</p>
-          <button class="nav-btn">Accounting Fundamentals</button>
-          <button class="nav-btn">Valuation Methods</button>
-          <button class="nav-btn">Financial Statement Analysis</button>
+          <button class="nav-btn" data-view="accounting" type="button">Accounting Fundamentals</button>
+          <button class="nav-btn" data-view="valuation" type="button">Valuation Methods</button>
+          <button class="nav-btn" data-view="financial-statements" type="button">Financial Statement Analysis</button>
         </nav>
       </aside>
 
       <main class="app-main">
         <header class="topbar">
-          <button class="ghost-btn">Profile</button>
-          <button id="logout-btn" class="ghost-btn">Logout</button>
+          <button class="ghost-btn" type="button">Profile</button>
+          <button id="logout-btn" class="ghost-btn" type="button">Logout</button>
         </header>
 
         <section class="content">
-          <h3>Dashboard</h3>
-          <p class="subtitle">Track your progress and continue learning</p>
+          <section class="view" data-view-content="dashboard">
+            <h3>Dashboard</h3>
+            <p class="subtitle">Track your progress and continue learning</p>
 
-          <div class="stats-grid">
-            <article class="card">
-              <p>Overall Progress</p>
-              <h4>42%</h4>
-            </article>
-            <article class="card">
-              <p>Topics Completed</p>
-              <h4>1/3</h4>
-            </article>
-            <article class="card">
-              <p>Study Streak</p>
-              <h4>12 days</h4>
-            </article>
-            <article class="card">
-              <p>Total Study Time</p>
-              <h4>18.5 hrs</h4>
-            </article>
-          </div>
+            <div class="stats-grid">
+              <article class="card">
+                <p>Overall Progress</p>
+                <h4>42%</h4>
+              </article>
+              <article class="card">
+                <p>Topics Completed</p>
+                <h4>1/3</h4>
+              </article>
+              <article class="card">
+                <p>Study Streak</p>
+                <h4>12 days</h4>
+              </article>
+              <article class="card">
+                <p>Total Study Time</p>
+                <h4>18.5 hrs</h4>
+              </article>
+            </div>
 
-          <h4 class="topics-title">Your Topics</h4>
-          <div class="topics-list">
-            <article class="topic-row">
-              <div>
-                <div class="topic-title-row">
-                  <strong>Accounting Fundamentals</strong>
-                  <span class="pill pill-blue">In Progress</span>
+            <h4 class="topics-title">Your Topics</h4>
+            <div class="topics-list">
+              <article class="topic-row" data-view="accounting" role="button" tabindex="0">
+                <div>
+                  <div class="topic-title-row">
+                    <strong>Accounting Fundamentals</strong>
+                    <span class="pill pill-blue">In Progress</span>
+                  </div>
+                  <p>Lessons: 17/20 · Tests: 3/4</p>
                 </div>
-                <p>Lessons: 17/20 · Tests: 3/4</p>
-              </div>
-              <span class="arrow">→</span>
-            </article>
-            <article class="topic-row">
-              <div>
-                <div class="topic-title-row">
-                  <strong>Valuation Methods</strong>
-                  <span class="pill pill-blue">In Progress</span>
+                <span class="arrow">→</span>
+              </article>
+              <article class="topic-row" data-view="valuation" role="button" tabindex="0">
+                <div>
+                  <div class="topic-title-row">
+                    <strong>Valuation Methods</strong>
+                    <span class="pill pill-blue">In Progress</span>
+                  </div>
+                  <p>Lessons: 9/20 · Tests: 1/4</p>
                 </div>
-                <p>Lessons: 9/20 · Tests: 1/4</p>
-              </div>
-              <span class="arrow">→</span>
-            </article>
-            <article class="topic-row">
-              <div>
-                <div class="topic-title-row">
-                  <strong>Financial Statement Analysis</strong>
-                  <span class="pill">Not Started</span>
+                <span class="arrow">→</span>
+              </article>
+              <article class="topic-row" data-view="financial-statements" role="button" tabindex="0">
+                <div>
+                  <div class="topic-title-row">
+                    <strong>Financial Statement Analysis</strong>
+                    <span class="pill">Not Started</span>
+                  </div>
+                  <p>Lessons: 0/20 · Tests: 0/4</p>
                 </div>
-                <p>Lessons: 0/20 · Tests: 0/4</p>
+                <span class="arrow">→</span>
+              </article>
+            </div>
+          </section>
+
+          <section class="view hidden" data-view-content="accounting" data-topic-view="accounting">
+            <div class="topic-home">
+              <h3>Accounting Fundamentals</h3>
+              <p class="subtitle">Choose how you want to study this topic.</p>
+              <div class="mode-grid">
+                <button class="mode-btn" type="button" data-topic="accounting" data-mode="learn">Learn</button>
+                <button class="mode-btn" type="button" data-topic="accounting" data-mode="flashcards">Flashcards</button>
+                <button class="mode-btn" type="button" data-topic="accounting" data-mode="tests">Tests</button>
               </div>
-              <span class="arrow">→</span>
-            </article>
-          </div>
+            </div>
+            <div class="topic-detail hidden" data-topic-detail="accounting"></div>
+          </section>
+
+          <section class="view hidden" data-view-content="valuation" data-topic-view="valuation">
+            <div class="topic-home">
+              <h3>Valuation Methods</h3>
+              <p class="subtitle">Choose how you want to study this topic.</p>
+              <div class="mode-grid">
+                <button class="mode-btn" type="button" data-topic="valuation" data-mode="learn">Learn</button>
+                <button class="mode-btn" type="button" data-topic="valuation" data-mode="flashcards">Flashcards</button>
+                <button class="mode-btn" type="button" data-topic="valuation" data-mode="tests">Tests</button>
+              </div>
+            </div>
+            <div class="topic-detail hidden" data-topic-detail="valuation"></div>
+          </section>
+
+          <section class="view hidden" data-view-content="financial-statements" data-topic-view="financial-statements">
+            <div class="topic-home">
+              <h3>Financial Statement Analysis</h3>
+              <p class="subtitle">Choose how you want to study this topic.</p>
+              <div class="mode-grid">
+                <button class="mode-btn" type="button" data-topic="financial-statements" data-mode="learn">Learn</button>
+                <button class="mode-btn" type="button" data-topic="financial-statements" data-mode="flashcards">Flashcards</button>
+                <button class="mode-btn" type="button" data-topic="financial-statements" data-mode="tests">Tests</button>
+              </div>
+            </div>
+            <div class="topic-detail hidden" data-topic-detail="financial-statements"></div>
+          </section>
         </section>
       </main>
     </section>
